# MANACC

./: .gitignore  README-BUILD.md  README.md  check_install.ps1  create_icon.py  find_install.py  fix_icon.py  package-lock.json
.claude/: settings.local.json
.github/workflows/: release.yml
frontend/: app.js  index.html  login.html  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/src/: encryption.rs  launcher.rs  main.rs  scraper.rs  session.rs  storage.rs
src-tauri/src/commands/: accounts.rs  auth.rs  auto_accept.rs  clipboard.rs  elevation.rs  launcher_cmd.rs  lobby.rs  mod.rs  shell.rs  startup.rs  stats.rs  update.rs
